fixing and indenting

--- a/front/src/components/Home/Features/style.scss
+++ b/front/src/components/Home/Features/style.scss
@@ -1,35 +1,40 @@
-@import 'scss/all-utilities';
+@import "scss/all-utilities";
 
 .home-features {
-   display: flex;
-   justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 
-   .home-image, .home-text {
-      flex: 1;
-   }
+  .home-image,
+  .home-text {
+    flex: 1;
+  }
 }
 
-.home-image { display: none; }
+.home-image {
+  display: none;
+}
 
-.home-text { text-align: center; }
+.home-text {
+  text-align: center;
+}
 
 .home-cta {
-   text-align: center;
-   margin-top: 1.25rem;
+  text-align: center;
+  margin-top: 1.25rem;
 }
 
 @include media-breakpoint-up(md) {
-   .home-image {
-      display: inline;
+  .home-image {
+    display: inline;
 
-      img {
-         margin-left: auto;
-         margin-right: auto;
-      }
-   }
+    img {
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
 
-   .home-text {
-      margin-left: 1.5625rem;
-      text-align: left;
-   }
+  .home-text {
+    margin-left: 1.5625rem;
+    text-align: left;
+  }
 }
