--- a/front/src/components/Infobox/AccountSummary/style.scss
+++ b/front/src/components/Infobox/AccountSummary/style.scss
@@ -1,7 +1,7 @@
 @import "scss/all-utilities";
 
-// .account-summary {
-// }
+.account-summary {
+}
 
 .account-summary-boxes,
 .account-summary-total {
