--- a/front/src/components/App/app.scss
+++ b/front/src/components/App/app.scss
@@ -1,27 +1,28 @@
-@import 'scss/vendor';
-@import 'scss/site';
+@import "scss/vendor";
+@import "scss/site";
 
-@import 'scss/all-utilities';
+@import "scss/all-utilities";
 
 .app {
-   padding-top: 0.9375rem;
-   padding-bottom: 0.9375rem;
+  padding-top: 0.9375rem;
+  padding-bottom: 0.9375rem;
 }
 
 // Panel content
 .panel-content {
-   h1, h2 {
-      &:first-child {
-         margin-top: 0;
-      }
-   }
+  h1,
+  h2 {
+    &:first-child {
+      margin-top: 0;
+    }
+  }
 }
 
 // 576px, small devices
 @include media-breakpoint-up(sm) {
-   .panel-content {
-      margin-top: 1.25rem;
-   }
+  .panel-content {
+    margin-top: 1.25rem;
+  }
 }
 
 @import "components/UI/Buttons/style";
