--- a/front/src/components/Home/Header/style.scss
+++ b/front/src/components/Home/Header/style.scss
@@ -1,20 +1,20 @@
-@import 'scss/all-utilities';
+@import "scss/all-utilities";
 
 .home-header {
-   margin-bottom: 2.5rem;
-   text-align: center;
+  margin-bottom: 2.5rem;
+  text-align: center;
 
-   h1 {
-      margin-top: 0;
-      text-align: center;
-      font-size: 2.125rem;
-   }
+  h1 {
+    margin-top: 0;
+    text-align: center;
+    font-size: 2.125rem;
+  }
 }
 
 @include media-breakpoint-up(md) {
-   .home-header {
-      h1 {
-         font-size: 3.75rem;
-      }
-   }
+  .home-header {
+    h1 {
+      font-size: 3.75rem;
+    }
+  }
 }
