--- a/front/src/components/UI/Backdrop/style.scss
+++ b/front/src/components/UI/Backdrop/style.scss
@@ -1,7 +1,10 @@
 .backdrop {
   position: fixed;
- top: 0; bottom: 0; left: 0; right: 0;
- width: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
   height: 100%;
   z-index: 997;
 
