--- a/front/scss/_custom-variables.scss
+++ b/front/scss/_custom-variables.scss
@@ -1,17 +1,17 @@
 // Colors
-$primary: #3c6cde;
+$primary: #30343d;
 
 $light-gray: #cbd8f3;
-$light-blue: #7c99d6;
-$dark-blue: #3c6cde;
+$light-blue: #a3bcf1;
+$dark-blue: #30343d;
 $navy-box-shadow: rgba(131, 100, 238, 0.15);
 
-$body-bg: #f5f5f5;
+$body-bg: #a8a4a4;
 $body-color: $light-blue;
 $input-color: $light-blue;
 $input-placeholder-color: $light-blue;
 
-$alt-danger: #d9534f !default;
+$alt-danger: #e21811 !default;
 
 // Fonts
 $font-family-sans-serif: Montserrat, "Open Sans", Roboto, Arial, sans-serif;
